[package]
name = "pomodoro_cli"
version = "0.1.0"
edition = "2021"
authors = ["falilatowolabi0@gmail.com"]
description = "A CLI Pomodoro tool that manages work and break intervals, tracks productivity, and features sound notifications and a progress bar."
license = "MIT"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
anyhow = "1.0"
rodio = "0.19.0"
indicatif = "0.17.8"